turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:8: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
		gauche(90); avance(150); droite(); avance(75)
                                               ^